2013-01-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update copyright notification for development in new year.

	* configure.ac (YEARS_OF_ISSUE): Add year 2013.

	* Makefile.in (version.c, guidata.$OBJEXT): Make them depend on...
	(Makefile): ...this, so YEARS_OF_ISSUE propagates to built objects.

2012-12-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around a GUI action scheduling instability.

	* src/guimain.h (AppWindowMaker::UpdateDataSheet): Declare new method.
	* src/pkgdata.cpp (AppWindowMaker::UpdateDataSheet): Implement it.
	(AppWindowMaker::OnNotify): Use it.

	* src/guiexec.cpp (AppWindowMaker::OnCommand) [IDD_REPO_APPLY]:
	Don't refresh package list view in-place; clear and reload it instead.

2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update distribution build rules.

	* Makefile.in (SRCDIST_FILES): Remove version.c.in; this was moved
	to src/version.c.in, and is now automatically included via...
	(SRCDIST_SUBDIRS): ...this; remove build-aux and build-aux/m4; we want
	only selected files from these, as filtered by specification in...
	(BUILD_AUX_DIRS, BUILD_AUX_FILES): ...these new macros; define them.
	(BLDTAG, SCMTAG, GCMTAG): New release class macros; define them.
	(bindist, licdist, srcdist): Use them.

2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update CLI implementation hooks for GUI integration.

	* Makefile.in (LIBEXEC_PROGRAMS): Replace gui$EXEEXT with
	guistub$EXEEXT; update make goal references accordingly.

	* src/rites.c (MINGW_GET_GUI): Redefine to be guimain$EXEEXT.
	(MINGW_GET_GFB): Define new fall-back; let it be guistub$EXEEXT.
	(RITES_IMPLEMENTATION): Perform rites for MINGW_GET_GUI.

	* src/clistub.c (main) [cannot exec MINGW_GET_GUI]: Try
	MINGW_GET_GFB instead.

2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rename executive core file for GUI implementation.

	* src/guixmld.cpp: File renamed...